--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         class="absolute bottom-0 left-0 w-0 h-0.5 bg-[#1a3066] group-hover:w-full transition-all duration-300 opacity-0 group-hover:opacity-100"></span>
                 </a>
                 <a href="#footer" class="relative group">
-                    <span>Contact Us</span>
+                    <span>Contact</span>
                     <span
                         class="absolute bottom-0 left-0 w-0 h-0.5 bg-[#1a3066] group-hover:w-full transition-all duration-300 opacity-0 group-hover:opacity-100"></span>
                 </a>
