changed filename for consistency in production environment

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ By choosing SycamoreNEST Consulting, you can enjoy the peace of mind assurance t
                 </div>
             </button>
 
-            <img src="./assets/images/random-2.png" alt="random-2" class="lg:w-[70%] lg:h-[40em] mx-auto">
+            <img src="./assets/images/sycamore-board.png" alt="random-2" class="lg:w-[70%] lg:h-[40em] mx-auto">
         </div>
 
         <!-- our approach -->
